# wincode

./: Cargo.toml  README.md  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  fuzz.yml  release.yml
fuzz/: Cargo.toml  build-fuzz-bundle.sh  build.rs  types.rs
fuzz/fuzz_targets/: differential.rs  fuzz_target_1.rs  roundtrip.rs  solana_types.rs  win_bin.rs
fuzz/tools/seedgen/: Cargo.toml
fuzz/tools/seedgen/src/: main.rs
wincode/: Cargo.toml  README.md  build.rs
wincode-derive/: Cargo.toml
wincode-derive/src/: assert_zero_copy.rs  common.rs  lib.rs  schema_read.rs  schema_write.rs  uninit_builder.rs
wincode/benches/: benchmarks.rs
wincode/codegen/: mod.rs  tuple.rs
wincode/src/: error.rs  io.rs  len.rs  lib.rs  proptest_config.rs  serde.rs  util.rs
wincode/src/config/: mod.rs  serde.rs
wincode/src/io/: cursor.rs  mod.rs  slice.rs  std_write.rs  test_util.rs  vec.rs
wincode/src/schema/: containers.rs  context.rs  impls.rs  int_encoding.rs  mod.rs  tag_encoding.rs
