[package]
name = "wincode-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
bincode_1 = { package = "bincode", version = "1.3" }
bincode_2 = { package = "bincode", version = "2.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
libfuzzer-sys = "0.4"
uuid = { version = "1.20.0", features = ["serde"] }

[dependencies.wincode]
path = "../wincode"
features = ["uuid-serde-compat"]
[dependencies.wincode-derive]
path = "../wincode-derive"

[build-dependencies]
wincode = { path = "../wincode", features = ["uuid-serde-compat"] }
wincode-derive = { path = "../wincode-derive" }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.20.0", features = ["serde"] }

[[bin]]
name = "roundtrip"
path = "fuzz_targets/roundtrip.rs"
test = false
doc = false
bench = false
