[package]
name = "wincode-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
bincode_1 = { package = "bincode", version = "1.3" }
bincode_2 = { package = "bincode", version = "2.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
libfuzzer-sys = "0.4"
uuid = { version = "1.20.0", features = ["serde"] }
wincode = { path = "../wincode", features = ["uuid-serde-compat", "std", "alloc", "solana-short-vec"] }
wincode-derive = { path = "../wincode-derive" }

solana-address = { version = "2.3.0", features = ["wincode"] }
solana-hash = { version = "4.2.0", features = ["wincode"] }
solana-fee-calculator = { version = "3.1.0", features = ["wincode"] }
solana-message = { version = "4.0.0", features = ["wincode"] }
solana-nonce = { version = "3.1.0", features = ["wincode"] }
solana-signature = { version = "3.3.0", features = ["wincode"] }
solana-transaction = { version = "4.0.0", features = ["wincode"] }
solana-entry = { git = "https://github.com/anza-xyz/agave", rev = "08b606ca461e4ec4afe34a40993080131d20dbe8", features = ["agave-unstable-api"] }
agave-votor-messages = { git = "https://github.com/anza-xyz/agave", rev = "08b606ca461e4ec4afe34a40993080131d20dbe8", features = ["agave-unstable-api"] }

[build-dependencies]
wincode = { path = "../wincode", features = ["uuid-serde-compat"] }
wincode-derive = { path = "../wincode-derive" }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.20.0", features = ["serde"] }

[[bin]]
name = "roundtrip"
path = "fuzz_targets/roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "solana_types"
path = "fuzz_targets/solana_types.rs"
test = false
doc = false
bench = false

[patch.crates-io]
wincode = { path = "../wincode" }
wincode-derive = { path = "../wincode-derive" }
solana-message = { git = "https://github.com/anza-xyz/solana-sdk", rev = "7ae7377dd4f3a141ae838203f67404c5a3a85159" }
solana-address = { git = "https://github.com/anza-xyz/solana-sdk", rev = "7ae7377dd4f3a141ae838203f67404c5a3a85159" }
solana-hash = { git = "https://github.com/anza-xyz/solana-sdk", rev = "7ae7377dd4f3a141ae838203f67404c5a3a85159" }
solana-instruction-error = { git = "https://github.com/anza-xyz/solana-sdk", rev = "7ae7377dd4f3a141ae838203f67404c5a3a85159" }
solana-signature = { git = "https://github.com/anza-xyz/solana-sdk", rev = "7ae7377dd4f3a141ae838203f67404c5a3a85159" }
solana-transaction = { git = "https://github.com/anza-xyz/solana-sdk", rev = "7ae7377dd4f3a141ae838203f67404c5a3a85159" }
solana-transaction-error = { git = "https://github.com/anza-xyz/solana-sdk", rev = "7ae7377dd4f3a141ae838203f67404c5a3a85159" }
