[package]
name = "wincode-derive"
version = "0.3.1"
authors.workspace = true
description = "Derive macros for wincode"
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
darling = "0.21.3"
proc-macro2.workspace = true
quote.workspace = true
syn = { version = "2.0.114", features = ["visit-mut", "visit"] }
