[package]
name = "wincode"
version = "0.3.1"
authors.workspace = true
description = "Fast bincode de/serialization with placement initialization"
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
categories = ["encoding", "network-programming"]
keywords = ["binary", "encode", "serialize", "deserialize", "bincode"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "-D", "warnings"]

[features]
default = ["std"]
alloc = []
std = ["alloc", "thiserror/std"]
solana-short-vec = ["dep:solana-short-vec"]
derive = ["dep:wincode-derive"]
uuid = ["dep:uuid"]
uuid-serde-compat = ["uuid"]

[dependencies]
pastey = "0.2.1"
solana-short-vec = { version = "3.2.0", optional = true }
thiserror = { version = "2.0.16", default-features = false }
wincode-derive = { version = "0.3.1", path = "../wincode-derive", optional = true }
uuid = { version = "1.20.0", optional = true, default-features = false }

[dev-dependencies]
bincode = { version = "1.3.3" }
proptest = { version = "1.9.0" }
proptest-derive = "0.7.0"
rand = { version = "0.9.2" }
serde = { version = "1.0.227", features = ["derive", "rc"] }
solana-short-vec = { version = "3.2.0" }
criterion = { version = "0.7.0", features = ["html_reports"] }
uuid = { version = "1.20.0", features = ["serde"] }

[build-dependencies]
proc-macro2.workspace = true
quote.workspace = true

[[bench]]
name = "benchmarks"
harness = false
required-features = ["std", "derive"]
